@@ -6,6 +6,7 @@ Unreleased Version 2.3.0-pre
  * Fix: Make freehand tool icon appear again if starting up with the eraser selected. Thanks Meiren for reporting.
  * Fix: Make software renderers handle canvas sizes with dimensions beyond 32767 pixels properly. Thanks Ben for reporting.
  * Fix: Open ORA files with width or height greater than 32767 pixels. Thanks Nimono for reporting.
+ * Feature: Make true /roll messages in chat have a blue tint to make cheating more difficult. They're also translatable now, rather than always being in English. Thanks KosmonautKat, lambda20xx and Potete for suggesting.
 
 2025-08-14 Version 2.3.0-beta.3
  * Fix: Allow putting labels on a blank brush thumbnail. Thanks hipofiz for reporting.
